fix feedback form heading font color in dark mode

--- a/apps/frontend/static_src/scss/components/feedback.scss
+++ b/apps/frontend/static_src/scss/components/feedback.scss
@@ -48,7 +48,6 @@
     }
 
     &__form-heading {
-        color: $color--off-black;
         margin-bottom: $gutter;
         text-align: center;
     }
